syntax = "proto3";

package game_result_manager;

option go_package = "github.com/nikita5637/quiz-registrator-api/pkg/pb/game_result_manager;gameresultmanager";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

message GameResult {
	int32 id = 1;
	int32 game_id = 2;
	uint32 result_place = 3;
	string round_points = 4;
}

service Service {
	// CreateGameResult adds new game result
	rpc CreateGameResult(CreateGameResultRequest) returns (GameResult) {
	}

	// Returns game results
	rpc ListGameResults(google.protobuf.Empty) returns (ListGameResultsResponse) {
	}

	// Patches game result
	rpc PatchGameResult(PatchGameResultRequest) returns (GameResult) {
	}

	// SearchGameResultByGameID returns game result by game ID
	rpc SearchGameResultByGameID(SearchGameResultByGameIDRequest) returns (GameResult) {
	}
}

message CreateGameResultRequest {
	GameResult game_result = 1;
}

message ListGameResultsResponse {
	repeated GameResult game_results = 1;
}

message PatchGameResultRequest {
	GameResult game_result = 1;

	google.protobuf.FieldMask update_mask = 2;
}

message SearchGameResultByGameIDRequest {
	int32 id = 1;
}